--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
+:root {
+    --fonte1: Verdena, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +15,7 @@
 html, body {
     min-height: 100vH;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -18,10 +26,13 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10%vw;
 }
 
 header > p {
     padding-bottom: 50px;
+    
 }
 
 a {
@@ -37,7 +48,10 @@ a:hover {
 section {
     padding-top: 10vH;
     padding-bottom: 10vh;
+    padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte3);
+    font-size: 3.5%vw;
 }
 
 section.normal {
@@ -51,7 +65,8 @@ section.imagem {
 
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.308);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer {
