--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -27,7 +27,7 @@ header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
-    font-size: 10%vw;
+    font-size: 10vw;
 }
 
 header > p {
@@ -51,7 +51,10 @@ section {
     padding-left: 30px;
     line-height: 2em;
     font-family: var(--fonte3);
-    font-size: 3.5%vw;
+    font-size: 3.5vw;
+}
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -61,12 +64,26 @@ section.normal {
 section.imagem {
     background-color: rgb(34, 34, 34);
     color: white;
+    box-shadow: inset 6px 13px 0px rgba(0, 0, 0, 0.616);
+    background-attachment: fixed;
+    
 }
 
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.308);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
+}
+section#img1 {
+    background-image: url(./imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+
+}
+section#img2 {
+    background-image: url(./imagens/background002.jpg);
+    background-size: cover;
 }
 
 footer {
@@ -74,4 +91,5 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
+    font-weight: bolder;
 }
